Rename Multi-Timer application to Interview Timer, update related documentation, and add MIT License. Adjusted CI/CD workflows and package configurations to reflect the new application name. Enhanced README and other files for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Multi-Timer</title>
+    <title>Interview Timer</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <div id="app" data-testid="app-container" x-data="multiTimerApp()">
       <header>
-        <h1>Multi-Timer</h1>
+        <h1>Interview Timer</h1>
         <p>Practice your interview timing with multiple synchronized timers</p>
       </header>
 
